# solana-svelte-counter

./: Anchor.toml  README.md  package-lock.json  package.json
app/: .gitignore  .prettierrc  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
app/src/: app.html
app/src/lib/: AnchorConnectionProvider.svelte  ConnectionProvider.svelte  Solana.svelte  WalletButton.svelte  WalletConnectButton.svelte  WalletIcon.svelte  WalletModal.svelte  WalletModalButton.svelte  WalletMultiButton.svelte  WalletProvider.svelte  workSpace.js
app/src/routes/: +layout.svelte  +page.svelte  __layout.svelte  index.svelte
app/src/styles/: styles.css
app/src/utils/: localStorage.ts  useWallet.ts  walletStore.ts  workSpace.ts
programs/solana-svelte-counter/: Cargo.toml
programs/solana-svelte-counter/src/: lib.rs
template/: package-lock.json  package.json  rollup.config.js
template/src/: App.svelte
template/src/lib/: AnchorConnectionProvider.svelte  ConnectionProvider.svelte  WalletConnectButton.svelte  WalletModal.svelte  WalletMultiButton.svelte  WalletProvider.svelte
template/src/styles/: styles.css
template/src/utils/: localStorage.ts
tests/: solana-svelte-counter.js
